--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My First Assignment</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    
+    <section class="donate-flood">
+        <div class="flood-people">
+            <h1 id="h1first-id">Let's Help Those Who Are More In Need</h1>
+            <p>The extreme flooding has caused heartbreaking damage across north-eastern Bangladesh putting 1.6 million
+                children at risk.Your donation will help support children in Bangladesh during this emergency, to help
+                rebuild after the floods.</p><br>
+            <a class="button-link" target="_blank" href="">Donate Now</a>
+    </section>
+    </div>
+    <section class="donate-flood2">
+        <h1 id="h1-second">Donate Today</h1>
+        <p>Children need your support, urgently. Kindly donate with an open arm and let us help the most vulnerable.They
+            need help now.</p>
+        <ul class="taka">
+            <li>100tk</li>
+            <li>200tk</li>
+            <li>500tk</li>
+            <li>1000tk</li>
+            <li>5000tk</li>
+        </ul>
+    </section>
 </body>
+
 </html>
