--- a/index.html
+++ b/index.html
@@ -16,24 +16,72 @@
     <section class="donate-flood">
         <div class="flood-people">
             <h1 id="h1first-id">Let's Help Those Who Are More In Need</h1>
-            <p>The extreme flooding has caused heartbreaking damage across north-eastern Bangladesh putting 1.6 million
-                children at risk.Your donation will help support children in Bangladesh during this emergency, to help
+            <p>The extreme flooding has caused heartbreaking damage across north-eastern Bangladesh
+                putting 1.6 million
+                children at risk.Your donation will help support them in Bangladesh during this
+                emergency, to help
                 rebuild after the floods.</p><br>
             <a class="button-link" target="_blank" href="">Donate Now</a>
+        </div>
     </section>
-    </div>
+
     <section class="donate-flood2">
-        <h1 id="h1-second">Donate Today</h1>
-        <p>Children need your support, urgently. Kindly donate with an open arm and let us help the most vulnerable.They
-            need help now.</p>
-        <ul class="taka">
-            <li>100tk</li>
-            <li>200tk</li>
-            <li>500tk</li>
-            <li>1000tk</li>
-            <li>5000tk</li>
-        </ul>
+        <h1 class="h1-second">Donate Today</h1>
+        <p id="para-first">They need your support, urgently.We always welcome donations and promise to use them to
+            provide help to adults and children in
+            crisis.</p><br>
+        <div><br>
+            <ul class="taka">
+                <li>100tk</li>
+                <li id="pink">200tk</li>
+                <li>500tk</li>
+                <li>1000tk</li>
+                <li>5000tk</li>
+            </ul>
+        </div><br>
+        <div id="taka-amount">Other Amount(Taka)</div>
+        <hr><br>
+        <a class="button-link" target="_blank" href="">Donate Now</a>
     </section>
+    <section>
+        <div>
+            <h1 class="h1-second">Our Donate Plan</h1>
+            <p id="para-2">Flood vicitms in Sylhet and several other districts in Bangladesh have been going through
+                immense
+                due to crisis of food, shelter and education.</p>
+        </div><br>
+    </section>
+
+    <section class="donate-section">
+        <div class="three-all" id="food">
+            <img src="icons/food.png" alt="">
+            <h3>Food for a family</h3>
+            <p>Every food donation helps in the fight against hunger – no matter how small or large.Your small
+                contribution will support us to feed poor patients and their family members outside
+                hospitals.</p>
+        </div>
+        <div class="three-all" id="shelter">
+            <img src="icons/shelter.png" alt="">
+            <h3>Shelter for a family</h3>
+            <p>We are rebuilding lives, one family at a time, by giving them a home, as well as the resources
+                they need to live the life they deserve.Donate now to help thousands of families facing
+                homelessness.</p>
+        </div>
+        <div class="three-all" id="education">
+            <img src="icons/Frame-1.png" alt="">
+            <h3>Education for a child</h3>
+            <p>Education for the children is important for the all-inclusive development of a child.Let's reach
+                out to
+                the
+                Underprivileged Children & Youth and Fulfill their Dream to Learn and Earn.</p>
+        </div>
+    </section>
+    <section>
+        <h1 class="h1-second">Their lives depend on
+            your donation</h1>
+        <p></p>
+    </section>
+
 </body>
 
 </html>
