--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Poppins&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -20,7 +23,8 @@
                 putting 1.6 million
                 children at risk.Your donation will help support them in Bangladesh during this
                 emergency, to help
-                rebuild after the floods.</p><br>
+                rebuild after the floods.</p>
+            <br>
             <a class="button-link" target="_blank" href="">Donate Now</a>
         </div>
     </section>
@@ -71,17 +75,18 @@
             <img src="icons/Frame-1.png" alt="">
             <h3>Education for a child</h3>
             <p>Education for the children is important for the all-inclusive development of a child.Let's reach
-                out to
-                the
-                Underprivileged Children & Youth and Fulfill their Dream to Learn and Earn.</p>
+                out to the Underprivileged Children & Youth and Fulfill their Dream to Learn and Earn.</p>
         </div>
     </section>
     <section>
-        <h1 class="h1-second">Their lives depend on
-            your donation</h1>
+        <h1 class="h1-second">Get My Updates</h1>
         <p></p>
     </section>
 
 </body>
+<footer class="last">
+    <p id="h3-first">Be Humble</p>
+    <p id="last-para">I'm gonna do it</p>
+</footer>
 
 </html>
