--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </section>
 
     <section class="donate-flood2">
-        <h1 class="h1-second">Donate Today</h1>
+        <h2 class="h1-second">Donate Today</h2>
         <p id="para-first">They need your support, urgently.We always welcome donations and promise to use them to
             provide help to adults and children in
             crisis.</p><br>
@@ -47,14 +47,13 @@
         <hr><br>
         <a class="button-link" target="_blank" href="">Donate Now</a>
     </section>
-    <section>
-        <div>
-            <h1 class="h1-second">Our Donate Plan</h1>
-            <p id="para-2">Flood vicitms in Sylhet and several other districts in Bangladesh have been going through
-                immense
-                due to crisis of food, shelter and education.</p>
-        </div><br>
-    </section>
+
+    <div>
+        <h2 class="h1-second">Our Donate Plan</h2>
+        <p id="para-2">Flood vicitms in Sylhet and several other districts in Bangladesh have been going through
+            immense
+            due to crisis of food, shelter and education.</p>
+    </div><br>
 
     <section class="donate-section">
         <div class="three-all" id="food">
@@ -79,14 +78,36 @@
         </div>
     </section>
     <section>
-        <h1 class="h1-second">Get My Updates</h1>
-        <p></p>
+        <h2 class="h1-second">The BIG Charity Giveback</h2>
+        <p id="giveway">Calling all charity fundraisers, this one's for you! By simply fundraising with us, you could
+            win a 2,500tk
+            cash boost for your charity, every week until the end of July!</p><br>
+        <div id="giv-imge">
+            <img src="images/pngtree-it-s-time-for-a-giveaway-banner-png-image_4011203.png" alt="">
+        </div><br>
+        <div><a id="start-id" target="_blank" href="">start Now</a></div>
+    </section>
+    <section>
+        <div>
+            <h2 class="h1-second">Get My Updates</h2>
+            <p id="update">Regularly updating donors can motivate them to make additional donations. You can begin
+                establishing
+                the
+                relationship right away by subscribing below to get updates.</p>
+        </div>
+        <div class="input-all" id="em-id"><input type="text" placeholder="Email" name="mail" required>
+            <div class="input-all">
+                <a id="sub-id" target="_blank" href="">submit</a>
+    </section>
+    </div>
+    </div>
     </section>
 
 </body>
 <footer class="last">
     <p id="h3-first">Be Humble</p>
     <p id="last-para">I'm gonna do it</p>
+
 </footer>
 
 </html>
