--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </div>
         <div class="input-all" id="em-id"><input type="text" placeholder="Email" name="mail" required>
             <div class="input-all">
-                <a id="sub-id" target="_blank" href="">submit</a>
+                <a id="sub-id" target="_blank" href="">Subscribe</a>
     </section>
     </div>
     </div>
