--- a/index.html
+++ b/index.html
@@ -95,13 +95,15 @@
                 the
                 relationship right away by subscribing below to get updates.</p>
         </div>
-        <div class="input-all" id="em-id"><input type="text" placeholder="Email" name="mail" required>
+        <form action="/action_page.php">
             <div class="input-all">
-                <a id="sub-id" target="_blank" href="">Subscribe</a>
+                <input type="email" placeholder="Email" name="email">
+                <input type="submit" value="Subscribe">
+            </div>
+        </form>
+
     </section>
-    </div>
-    </div>
-    </section>
+
 
 </body>
 <footer class="last">
