--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             win a 2,500tk
             cash boost for your charity, every week until the end of July!</p><br>
         <div id="giv-imge">
-            <img src="images/pngtree-it-s-time-for-a-giveaway-banner-png-image_4011203.png" alt="">
+            <img src="./images/pngtree-it-s-time-for-a-giveaway-banner-png-image_4011203.png" alt="">
         </div><br>
         <div><a id="start-id" target="_blank" href="">start Now</a></div>
     </section>
